[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentobs"
version = "0.1.0"
description = "OpenTelemetry observability layer for LLM agent loops: spans per turn/tool/LLM call with token and cost attribution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arun Konapala", email = "arun.konapala@gmail.com" }]
dependencies = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
dev = ["pytest>=8.0", "langchain-core>=0.3"]

[tool.setuptools.packages.find]
include = ["agentobs*"]
